--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -81,7 +81,7 @@ jobs:
         git clone https://github.com/Apocalypsor/luci-app-smartdns.git openwrt/package/luci-app-smartdns
         git clone https://github.com/frainzy1477/luci-app-clash.git openwrt/package/luci-app-clash
         git clone https://github.com/project-openwrt/luci-app-koolproxyR.git openwrt/package/luci-app-koolproxyR
-        git clone https://github.com/vernesong/OpenClash.git && mv OpenClash/luci-app-openclash openwrt/package/luci-app-openclash
+        git clone -b master https://github.com/vernesong/OpenClash.git && mv OpenClash/luci-app-openclash openwrt/package/luci-app-openclash
     - name: Update Feeds
       run: |
        cd openwrt
