--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -98,7 +98,7 @@ jobs:
         cd openwrt
         ../$DIY_SH
      #若使用./scripts/diffconfig.sh > config.seed生成的差异文件恢复扩展为完整的.config配置文件请删除下行注释符号
-     #   make defconfig
+        make defconfig
 
     - name: SSH connection to Actions
       uses: P3TERX/debugger-action@master
