--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -98,7 +98,7 @@ jobs:
         cd openwrt
         ../$DIY_SH
      #若使用./scripts/diffconfig.sh > config.seed生成的差异文件恢复扩展为完整的.config配置文件请删除下行注释符号
-        make defconfig
+        # make defconfig
 
     - name: SSH connection to Actions
       uses: P3TERX/debugger-action@master
@@ -115,7 +115,7 @@ jobs:
       id: compile
       run: |
         cd openwrt
-        ./scripts/diffconfig.sh > seed.config     
+        #./scripts/diffconfig.sh > seed.config     
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 V=s
         echo "::set-output name=status::success"
